--- a/my-work.css
+++ b/my-work.css
@@ -21,7 +21,6 @@
 
 .my-work .span {
 	text-align: center;
-	margin-bottom: 25px;
 }
 
 .my-work span {
@@ -38,11 +37,11 @@
 .my-work .container {
 	display: grid;
 	grid-template-columns: auto auto;
-	grid-gap: 20px 30px;
+	grid-gap: 0 20px;
 }
 
 .my-work .container .block-img {
-	padding-bottom: 30px;
+	padding: 30px 0;
 	border-bottom: 1px solid rgb(90, 82, 82);
 }
 
@@ -88,3 +87,19 @@
     transform: rotateX(0);
 }
 
+/* contact-me */
+
+.contact-me {
+	height: 100vh;
+}
+
+.contact-me .title {
+	padding: 3rem 4rem;
+	text-align: center;
+}
+
+.contact-me .title h1 {
+	position: relative;
+	padding-bottom: 10px;
+	margin-bottom: 8px;
+}
