--- a/my-work.css
+++ b/my-work.css
@@ -103,3 +103,52 @@
 	padding-bottom: 10px;
 	margin-bottom: 8px;
 }
+
+
+.form .container div input {
+	margin: 1rem 0;
+	background-color: rgb(224, 224, 209,0.2);
+	color: white;
+	border: 1px solid #fff;
+}
+
+input:focus {
+	outline: none;
+}
+
+.input-name-email {
+	display: flex;
+	justify-content: space-between;
+}
+
+#input-name {
+	flex-basis: 49%;
+	height: 2.5rem;
+	padding: 10px;
+}
+#input-email {
+	flex-basis: 49%;
+	height: 2.5rem;
+	padding: 10px;
+}
+
+.form .container .input-subject {
+	width: 100%;
+}
+
+.form .container .input-subject input{
+	width: 100%;
+	height: 2.5rem;
+	padding: 10px;
+}
+
+.form .container .comment input {
+	width: 100%;
+	padding: 10px 10px 8rem;
+}
+
+.form .container .button {
+	width: 100%;
+	text-align: center;
+	margin-top: .8rem;
+}
